--- a/gamehub.client/src/routes/Library.module.css
+++ b/gamehub.client/src/routes/Library.module.css
@@ -66,7 +66,7 @@
     gap: 3rem;
 }
 
-.pagination{
+.pagination {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -74,7 +74,7 @@
     width: 300px;
 }
 
-.pagination button{
+.pagination button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,32 +86,33 @@
     transition: all 0.3s ease;
 }
 
-.pagination button .icon{
+.pagination button .icon {
     fill: var(--lightGrey);
     transition: all 0.3s ease;
 }
 
-.pagination button:disabled{
+.pagination button:disabled {
     color: var(--mediumgrey);
     cursor: not-allowed;
 }
 
-.pagination button:disabled .icon{
+.pagination button:disabled .icon {
     fill: var(--mediumgrey);
 }
 
-.pagination .able:hover{
+.pagination .able:hover {
     border-color: var(--turquoise);
-    color: var(--whiteSmoke);
+    color: var(--whitesmoke);
 }
 
-.pagination .able:hover .icon{
+.pagination .able:hover .icon {
     fill: var(--turquoise);
 }
 
 .gameData {
     background-color: var(--black);
     position: relative;
+    border: 5px solid transparent;
     border-radius: 5px;
     box-shadow: 2px 2px 10px 5px var(--black);
     transition: all 0.3s ease;
@@ -125,6 +126,8 @@
 
 .gameData:hover,
 .gameData:focus {
+    border-radius: 10px;
+    border-color: var(--turquoise);
     transform: scale(1.15);
     box-shadow: 2px 2px 10px 5px var(--turquoise);
 }
@@ -136,14 +139,14 @@
     white-space: normal;
 }
 
-.divPin{
+.divPin {
     position: absolute;
     z-index: 1;
     right: 0;
     top: 0;
 }
 
-.divPin button{
+.divPin button {
     border: 1px solid transparent;
     background-color: transparent;
     border-bottom-left-radius: 5px;
@@ -152,7 +155,7 @@
     transition: all 0.3s ease;
 }
 
-.divPin .pinController{
+.divPin .pinController {
     border: 1px solid transparent;
     background-color: transparent;
     border-bottom-left-radius: 5px;
@@ -161,29 +164,29 @@
     transition: all 0.3s ease;
 }
 
-.divPin .pinController .iconPin{
+.divPin .pinController .iconPin {
     font-size: 25px;
 }
 
 .iconDontPin,
-.iconPin{
+.iconPin {
     font-size: 16px;
     transition: all 0.3s ease;
 }
 
-.divPin button:hover{
+.divPin button:hover {
     transform: scale(1.2);
 }
 
-.divPin button:hover .iconDontPin{
+.divPin button:hover .iconDontPin {
     fill: var(--turquoise);
 }
 
-.iconDontPin{
+.iconDontPin {
     fill: var(--lightGrey);
 }
 
-.iconPin{
+.iconPin {
     fill: var(--turquoise);
 }
 
@@ -206,13 +209,13 @@
     position: absolute;
     overflow: hidden;
     z-index: 1;
-    background-color: var(--clearblack);
+    background-color: rgba(35, 35, 35, 0.9);
     border-radius: 5px;
     opacity: 0;
     transition: all 0.5s ease;
 }
 
-.btnSummary{
+.btnSummary {
     width: 100%;
     background-color: transparent;
     font-size: 16px;
@@ -220,11 +223,11 @@
     transition: all 0.5s ease;
 }
 
-.btnSummary:hover{
+.btnSummary:hover {
     color: var(--whitesmoke);
 }
 
-.divSummary{
+.divSummary {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -238,11 +241,15 @@
     background-color: var(--black);
 }
 
-.bigGameData{
+.bigGameData {
     transform: scale(1.5);
     z-index: 2;
     box-shadow: 2px 2px 10px 5px transparent;
-    border: 2px solid var(--grey);
+    border: 5px solid transparent;
+}
+
+.bigGameData .divRating{
+    display: none;
 }
 
 .bigGameData:hover,
@@ -251,21 +258,31 @@
     box-shadow: 2px 2px 10px 5px transparent;
 }
 
-.divContent{
+.platinumGame {
+    border-top-color: rgba(193, 190, 186, 0.9);
+    border-right-color: rgba(217, 215, 213, 0.9);
+    border-bottom-color: rgba(241, 241, 239, 0.9);
+    border-left-color: rgba(205, 203, 199, 0.9);
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px 5px rgba(241, 241, 239, 0.5);
+}
+
+.divContent {
     max-height: 93%;
     overflow-y: auto;
     padding: 5px 3px;
     border-radius: 5px;
     background-color: var(--clearblack);
-    
+
 }
 
-.divSummary .summaryContent{
+.divSummary .summaryContent {
+    
     font-size: 12px;
     color: var(--lightGrey);
 }
 
-.divSummary .btnSummary{
+.divSummary .btnSummary {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -307,12 +324,15 @@
 }
 
 .divSimplifiedData p {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
+    color: var(--whitesmoke);
 }
 
 .divSimplifiedData p span {
     font-weight: normal;
+    font-size: 12px;
+    color: var(--lightGrey);
 }
 
 .btnDiv {
@@ -324,6 +344,258 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 5px;
+    border-top: 2px solid var(--grey);
+    padding-top: 5px;
+}
+
+.divRating{
+    position: absolute;
+    z-index: 2;
+    top: -14px;
+    left: -14px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.divRating .ratingController{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 2px;
+    background-color: var(--mediumgrey);
+    border: 2px solid var(--grey);
+    font-weight: bold;
+}
+
+.divRating .aboveAverage{
+    background-color: var(--black);
+    border-color: var(--turquoise);
+    color: turquoise;
+}
+
+.divRating .almostPerfect{
+    color: var(--black);
+    text-decoration: none;
+    font-weight: 1000;
+    text-shadow: 0px 0px 1px var(--turquoise);
+    box-shadow:
+        2px 2px 0.5em rgba(122, 122, 122, 0.55),
+        inset 1px 1px 0 rgba(255, 255, 255, 0.9),
+        inset -1px -1px 0 rgba(0, 0, 0, 0.5);
+    border: 1px solid #cacade;
+    background:
+        -moz-linear-gradient(-72deg,
+            #dedeff,
+            #ffffff 16%,
+            #dedeff 21%,
+            #ffffff 24%,
+            #555564 27%,
+            #dedeff 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedeff 72%,
+            #ffffff 80%,
+            #dedeff 84%,
+            #555564);
+    background:
+        -webkit-linear-gradient(-72deg,
+            #dedeff,
+            #ffffff 16%,
+            #dedeff 21%,
+            #ffffff 24%,
+            #555564 27%,
+            #dedeff 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedeff 72%,
+            #ffffff 80%,
+            #dedeff 84%,
+            #555564);
+    background:
+        -o-linear-gradient(-72deg,
+            #dedeff,
+            #ffffff 16%,
+            #dedeff 21%,
+            #ffffff 24%,
+            #555564 27%,
+            #dedeff 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedeff 72%,
+            #ffffff 80%,
+            #dedeff 84%,
+            #555564);
+    background:
+        linear-gradient(-72deg,
+            #dedeff,
+            #ffffff 16%,
+            #dedeff 21%,
+            #ffffff 24%,
+            #555564 27%,
+            #dedeff 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedeff 72%,
+            #ffffff 80%,
+            #dedeff 84%,
+            #555564);
+}
+
+.divRating .perfect{
+    color: var(--black);
+  text-decoration: none;
+  font-weight: 1000;
+  text-shadow: 1px 1px 0 #ffffff;
+  box-shadow:
+    2px 2px 0.5em rgba(122, 98, 0, 0.55),
+    inset 1px 1px 0 rgba(255, 255, 255, 0.9),
+    inset -1px -1px 0 rgba(0, 0, 0, 0.34)
+  ;
+  border: 1px solid #deca73;
+  background:
+    -moz-linear-gradient(
+    -72deg,
+    #ffde45,
+    #ffffff 16%,
+    #ffde45 21%,
+    #ffffff 24%,
+    #452100 1%,
+    #ffde45 36%,
+    #ffffff 45%,
+    #ffffff 60%,
+    #ffde45 72%,
+    #ffffff 80%,
+    #ffde45 84%,
+    #452100
+  );
+  background:
+  -webkit-linear-gradient(
+    -72deg,
+    #ffde45,
+    #ffffff 16%,
+    #ffde45 21%,
+    #ffffff 24%,
+    #452100 27%,
+    #ffde45 36%,
+    #ffffff 45%,
+    #ffffff 60%,
+    #ffde45 72%,
+    #ffffff 80%,
+    #ffde45 84%,
+    #452100
+  );
+  background:
+  -o-linear-gradient(
+    -72deg,
+    #ffde45,
+    #ffffff 16%,
+    #ffde45 21%,
+    #ffffff 24%,
+    #452100 27%,
+    #ffde45 36%,
+    #ffffff 45%,
+    #ffffff 60%,
+    #ffde45 72%,
+    #ffffff 80%,
+    #ffde45 84%,
+    #452100
+  );
+  background:
+  linear-gradient(
+    -72deg,
+    #ffde45,
+    #ffffff 16%,
+    #ffde45 21%,
+    #ffffff 24%,
+    #452100 27%,
+    #ffde45 36%,
+    #ffffff 45%,
+    #ffffff 60%,
+    #ffde45 72%,
+    #ffffff 80%,
+    #ffde45 84%,
+    #452100
+  );
+}
+
+.divRating .bad{
+    background-color: var(--black);
+    border-color: #FFC72C;
+    color: #FFC72C;
+}
+
+.divRating .horrible{
+    background-color: var(--black);
+    border-color: #FF3800;
+    color: #FF3800;
+}
+
+.divRating .unplayable{
+    font-weight: 1000;
+    background-color: var(--black-blue);
+    border-color: #660000;
+    color: #960018;
+}
+
+.divEditRating{
+    padding-bottom: 5px;
+    border-bottom: 2px solid var(--grey);
+    width: 100%;
+}
+
+.divEditRating .ratingController{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2px;
+}
+
+.divEditRating .ratingController label{
+    color: var(--lightGrey);
+    font-size: 14px;
+}
+
+.divEditRating .ratingController input{
+    text-align: center;
+    background-color: transparent;
+    border: 2px solid var(--grey);
+    background-color: var(--black);
+    width: 30px;
+    height: 30px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding-right: 1px;
+    color: var(--turquoise);
+    transition: all 0.3s ease;
+}
+
+.divEditRating .ratingController input:focus{
+    border-color: var(--turquoise);
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
+.divEditRating .ratingController button{
+    background-color: transparent;
+    font-size: 13px;
+    color: var(--lightGrey);
+    transition: all 0.3s ease;
+}
+
+.divEditRating .ratingController button:hover{
+    color: var(--whitesmoke);
 }
 
 .btnAdd {
@@ -331,12 +603,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: transparent
+    background-color: transparent;
 }
 
 .btnAdd span {
     opacity: 0;
     color: var(--lightGrey);
+    height: 0px;
     transition: all 0.3s ease;
 }
 
@@ -347,6 +620,7 @@
 }
 
 .btnAdd:hover span {
+    height: 100%;
     opacity: 1;
 }
 
@@ -359,11 +633,11 @@
     fill: crimson;
 }
 
-.btnAdd .spanRemove{
+.btnAdd .spanRemove {
     color: crimson;
 }
 
-.gameState{
+.gameState {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -373,7 +647,7 @@
     background-color: var(--mediumgrey);
 }
 
-.gameState p{
+.gameState p {
     color: var(--lightGrey);
     font-size: 16px;
     width: 100%;
@@ -384,12 +658,12 @@
     border: 2px solid transparent;
 }
 
-.gameState .statusVouJogar{
-    border-color: var(--whiteSmoke);
+.gameState .statusVouJogar {
+    border-color: var(--whitesmoke);
     font-weight: bold;
 }
 
-.gameState .statusJogando{
+.gameState .statusJogando {
     background-color: var(--black);
     border-color: var(--turquoise);
     color: var(--turquoise);
@@ -397,55 +671,222 @@
     font-weight: bold;
 }
 
-.gameState .statusJaJoguei{
+.gameState .statusJaJoguei {
     background-color: var(--turquoise);
     border-color: var(--darkcyan);
     color: var(--black);
     font-weight: bold;
 }
 
-.bigGameData .gameState .statusVouJogar{
+.gameState .statusVouPlatinar {
+    color: var(--black);
+    text-decoration: none;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 #ffffff;
+    box-shadow:
+        2px 2px 0.5em rgba(122, 122, 122, 0.55),
+        inset 1px 1px 0 rgba(255, 255, 255, 0.9),
+        inset -1px -1px 0 rgba(0, 0, 0, 0.5);
+    border: 2px solid #cacade;
+    background-color: var(--turquoise);
+}
+
+.gameState .statusPlatinando {
+    color: var(--black);
+    text-decoration: none;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 var(--turquoise);
+    box-shadow:
+        2px 2px 0.5em rgba(122, 122, 122, 0.55),
+        inset 1px 1px 0 rgba(255, 255, 255, 0.9),
+        inset -1px -1px 0 rgba(0, 0, 0, 0.34);
+    border: 2px solid var(--darkcyan);
+    background:
+        -moz-linear-gradient(-72deg,
+            #dedede,
+            #ffffff 16%,
+            #dedede 21%,
+            #ffffff 24%,
+            #454545 27%,
+            #dedede 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedede 72%,
+            #ffffff 80%,
+            #dedede 84%,
+            #a1a1a1);
+    background:
+        -webkit-linear-gradient(-72deg,
+            #dedede,
+            #ffffff 16%,
+            #dedede 21%,
+            #ffffff 24%,
+            #454545 27%,
+            #dedede 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedede 72%,
+            #ffffff 80%,
+            #dedede 84%,
+            #a1a1a1);
+    background:
+        -o-linear-gradient(-72deg,
+            #dedede,
+            #ffffff 16%,
+            #dedede 21%,
+            #ffffff 24%,
+            #454545 27%,
+            #dedede 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedede 72%,
+            #ffffff 80%,
+            #dedede 84%,
+            #a1a1a1);
+    background:
+        linear-gradient(-72deg,
+            #dedede,
+            #ffffff 16%,
+            #dedede 21%,
+            #ffffff 24%,
+            #454545 27%,
+            #dedede 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedede 72%,
+            #ffffff 80%,
+            #dedede 84%,
+            #a1a1a1);
+}
+
+.gameState .statusJaPlatinei {
+    color: var(--black);
+    text-decoration: none;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 #ffffff;
+    box-shadow:
+        2px 2px 0.5em rgba(122, 122, 122, 0.55),
+        inset 1px 1px 0 rgba(255, 255, 255, 0.9),
+        inset -1px -1px 0 rgba(0, 0, 0, 0.5);
+    border: 1px solid #cacade;
+    background:
+        -moz-linear-gradient(-72deg,
+            #dedeff,
+            #ffffff 16%,
+            #dedeff 21%,
+            #ffffff 24%,
+            #555564 27%,
+            #dedeff 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedeff 72%,
+            #ffffff 80%,
+            #dedeff 84%,
+            #555564);
+    background:
+        -webkit-linear-gradient(-72deg,
+            #dedeff,
+            #ffffff 16%,
+            #dedeff 21%,
+            #ffffff 24%,
+            #555564 27%,
+            #dedeff 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedeff 72%,
+            #ffffff 80%,
+            #dedeff 84%,
+            #555564);
+    background:
+        -o-linear-gradient(-72deg,
+            #dedeff,
+            #ffffff 16%,
+            #dedeff 21%,
+            #ffffff 24%,
+            #555564 27%,
+            #dedeff 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedeff 72%,
+            #ffffff 80%,
+            #dedeff 84%,
+            #555564);
+    background:
+        linear-gradient(-72deg,
+            #dedeff,
+            #ffffff 16%,
+            #dedeff 21%,
+            #ffffff 24%,
+            #555564 27%,
+            #dedeff 36%,
+            #ffffff 45%,
+            #ffffff 60%,
+            #dedeff 72%,
+            #ffffff 80%,
+            #dedeff 84%,
+            #555564);
+}
+
+.bigGameData .gameState .statusVouJogar {
     border-color: transparent;
 }
 
-.bigGameData .gameState .statusJogando{
+.bigGameData .gameState .statusJogando {
     background-color: transparent;
     border-color: transparent;
     box-shadow: 0px 0px 5px transparent;
 }
 
-.bigGameData .gameState .statusJaJoguei{
+.bigGameData .gameState .statusJaJoguei {
     background-color: transparent;
     border-color: transparent;
 }
 
-.divStatus{
+.bigGameData .gameState .statusVouPlatinar {
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.bigGameData .gameState .statusPlatinando {
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.bigGameData .gameState .statusJaPlatinei {
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.divStatus {
     position: relative;
     display: flex;
     flex-direction: column;
+    border-top: 2px solid var(--grey);
+    width: 100%;
 }
 
-.labelStatus{
+.labelStatus {
     background-color: transparent;
     padding: 2px 5px;
-    font-size: 16px;
+    font-size: 14px;
+    color: var(--lightGrey);
     border-radius: 5px;
     transition: all 0.3s ease;
     border: 2px solid transparent;
     margin-bottom: 2px;
 }
 
-.labelStatus:hover{
+.labelStatus:hover {
     background-color: var(--clearblack);
     border-color: var(--turquoise);
 }
 
-.divStatus select{
+.divStatus select {
     outline: none;
 }
 
-.selectStatus{
-    top: -72px;
+.selectStatus {
+    top: -125px;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -460,16 +901,16 @@
     padding: 0;
 }
 
-.statusOptions{
+.statusOptions {
     background-color: transparent;
     width: 100%;
 }
 
-.statusOptions:hover{
+.statusOptions:hover {
     background-color: var(--deepgray);
 }
 
-.selectStatus .select{
+.selectStatus .select {
     background-color: var(--turquoise);
     color: var(--black);
 }
